Tue Apr  8 18:32:30 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main.[ch]: added some variables in list of globals
 - drivers/serial.c,drivers/snmp-ups.h: implemented the above

Mon Apr  7 19:14:16 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: use alarm() to replace the behaviour of
   ne_set_connect_timeout() for neon < 0.27.0 (this will save us
   questions from people that complain that upsd is declaring the
   driver stale)

Mon Apr  7 14:10:32 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: require neon-0.25.0 or newer (essential
   functionality won't be available in earlier versions)

Mon Apr  7 12:50:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: some autoconf magic added to selectively build
   with connect timeout, depending on the neon library installed (it
   will build for neon < 0.27.0, but will inform the user about the
   risk of failed (re)connect attempts)

Sun Apr  6 13:20:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: add some sanity checks

Sun Apr  6 12:29:52 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/netxml-ups.8: be more verbose in explanation of the 'timeout'
   value that can be specified in 'ups.conf'

Sun Apr  6 11:41:03 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: require connectivity test to pass and fix
   some minor cosmetic things

Sun Apr  6 11:04:02 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c,include/state.h: don't use recursion if we are only
   walking through a tree or list

Sun Apr  6 08:30:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: use connect with timeout to prevent the
   server declaring us stale (requires neon-0.27.0 or newer)

Sat Apr  5 16:03:25 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: add connectivity test

Sat Apr  5 13:25:03 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>
